# zeroriskmoney

./: .gitignore  README.md  pyproject.toml
arbscan/: config.py  main.py  models.py  scanner.py
arbscan/engine/: capital.py  cost.py  eligibility.py  rank.py  spread.py
arbscan/feed/: base.py  mock.py
arbscan/ui/: alert.py  table.py
data/: config.example.toml
docs/superpowers/plans/: 2026-05-27-stf-spot-arb-scanner.md
docs/superpowers/specs/: 2026-05-27-stf-spot-arb-scanner-design.md
scripts/: spike_excel_bridge.py  spike_xqdde.py
tests/: test_capital.py  test_config.py  test_cost.py  test_eligibility.py  test_feed_mock.py  test_main_smoke.py  test_models.py  test_net.py  test_rank.py  test_scanner.py  test_spread.py  test_table.py
