[project]
name = "arbscan"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["rich>=13", "pydantic>=2", "pywin32>=306; sys_platform == 'win32'"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
